--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install playwright cloudscraper aiohttp
+          pip install playwright cloudscraper aiohttp pytz
           playwright install chromium
           # Install any other deps if needed
 
